Fixed scrollbar hovering in center of div. Reversed the display order (older items are pushed right).

--- a/src/css/Components/CollectionLog.css
+++ b/src/css/Components/CollectionLog.css
@@ -5,7 +5,6 @@
     padding: 4px;
     border-radius: 4px;
     display: block;
-    text-align: left;
     margin: 0 auto 10px;
 }
 
