--- a/src/css/Components/ItemLog.css
+++ b/src/css/Components/ItemLog.css
@@ -13,10 +13,10 @@
 .item_log_item_box {
     font-family: 'RunescapePlain', serif;
     color: #ff981f;
-    position: relative;
-    display: inline-block;
-    margin: 0 10px 10px 0;
-    text-align: left;
+    margin: 5px 10px 10px 5px;
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-bottom: 10px;
     min-width: 20px;
     min-height: 20px;
     flex-shrink: 0;
@@ -31,29 +31,28 @@
     text-shadow: 1px 1px 2px #000;
     pointer-events: none;
     line-height: 0;
-    margin-bottom: -25%;
+    margin-bottom: 0;
     margin-left: 0;
     white-space: nowrap;
     text-align: center;
+    padding-bottom: 5px;
 }
 
 .item_log_scroll_box {
-    width: 100%;
-    max-width: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
-    white-space: nowrap;
     box-sizing: border-box;
-    padding-bottom: 5px;
     scrollbar-width: thin;
     scroll-behavior: smooth;
     display: block;
-    flex-shrink: 0;
-    scrollbar-gutter: stable;
+    scrollbar-gutter: stable both-edges;
+    height: 100%;
+    padding-bottom: 55px;
 }
 
 .item_log_scroll_box > * {
     display: inline-flex;
+    flex-direction: row-reverse;
     flex-wrap: nowrap;
     flex-shrink: 0;
     width: max-content;
